RegressionTests/TestSuiteExport/reject/unexpected_token.blade
// EXPECT: fail
// DIAGNOSTICS: E0101

fn () { }